--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
                     <i class="devicon-github-original colored"></i>
                 </div>
 
+                <div class="skills-box">
+                    <p class="skills-title">Certificações</p>
+                    <img src="img/practitioner.png" alt="Certificacao AWS Cloud practitioner">
+                </div>
+
 
             </div>
         </section>
